# PhishGuard

./: .gitignore  app.py  database.py  final_processed_data.html  final_processed_data.ipynb  model_creator.html  model_creator.ipynb  predictor.py  pyproject.toml  requirements.txt
images/: dt_model_description.html  final_cnn_lstm.keras  rf_model_description.html
models/: best_cnn_model.keras  cnn_model.joblib  decision_tree_model.joblib  random_forest_model.joblib
models/decision_tree_model/: data_spec.pb  header.pb  nodes-00000-of-00001  random_forest_header.pb
models/random_forest_model/: random_forest_header.pb
static/: style.css
templates/: base.html  history.html  index.html
