[project]
name = "phishguard"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "flask>=2.2.0",
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "tensorflow-cpu>=2.16.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "tldextract>=3.4.0",
    "python-whois>=0.8.0",
]

[tool.uv]
python = "3.12"